plugins {
	id("java")
	id("eclipse")
	id("org.spongepowered.gradle.plugin") version "2.0.2"
}

group = "sawfowl"
version = "${major}.${minor}.${patch}-${suffix}"

java {
	sourceCompatibility = targetCompatibility = JavaVersion.VERSION_21
}

repositories {
	mavenCentral()
	maven {
		name = "Sponge"
		url = "https://repo.spongepowered.org/repository/maven-public/"
	}
	maven {
		name = 'Bukkit'
		url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
	}
	maven {
		name 'papermc'
		url 'https://repo.papermc.io/repository/maven-public/'
	}
	maven {
		name 'Sonatype'
		url 'https://oss.sonatype.org/content/repositories/snapshots/'
	}
}

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

dependencies {
	implementation "org.spongepowered:spongeapi:${sponge}"
	implementation "org.spigotmc:spigot-api:${spigot}"
	implementation "net.md-5:bungeecord-api:${bungeecord}"
	implementation "com.velocitypowered:velocity-api:${velocity}"
	annotationProcessor "com.velocitypowered:velocity-api:${velocity}"
}

sponge {
	apiVersion("${sponge}")
	loader {
		name("java_plain")
		version("1.0")
	}
	license("GNU")
	plugin("commandsync") {
		displayName(project.name.capitalize())
		version("${major}.${minor}.${patch}-API10")
		entrypoint("sawfowl.commandsyncclient.sponge.CSC")
		description("Synchronize commands across servers.")
		contributor("SawFowl") {
			description("Fork Developer")
		}
		contributor("YoFuzzy3") {
			description("Author")
		}
		links {
			homepage("https://discord.gg/7xnZGSYJH9")
			source("https://github.com/SawFowl/CommandSync")
			issues("https://discord.gg/7xnZGSYJH9")
		}
		dependency("spongeapi") {
			optional(false)
			loadOrder("after")
			version("${sponge}")
		}
	}
}
